# left-hand-control

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  SECURITY.md  Vagrantfile  app.config.ts  app.vue  eslint.config.mjs  nuxt.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vitest.components.config.ts  vitest.composables.config.ts  vitest.unit.config.ts
.github/: dependabot.yml
components/: ActionPicker.vue  ActionPickerBody.vue  ActionPickerModal.vue  CommandsTab.vue  EmojiTab.vue  FieldLabel.vue  HomeHelpCard.vue  HomeInfoCard.vue  HomePlatformStatusCard.vue  KeyCap.vue  KeyEditModal.vue  KeymapTab.vue  LayoutsTab.vue  LoadingScreen.vue  MacrosTab.vue  OverridableNumberField.vue  QuickActionsTab.vue  QuickMenuOverlay.vue  RulesTab.vue  SettingTimeoutField.vue  (+2 more)
src-tauri/: Cargo.toml  check_devices.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  storage.rs  tray.rs  window_controls.rs  window_state.rs
src-tauri/src/active_window/: linux.rs  mod.rs
src-tauri/src/gamemode/: linux.rs  mod.rs
src-tauri/src/layout/: linux_gnome.rs  linux_kde.rs  linux_sway.rs  linux_x11.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/mapper/: action.rs  config.rs  engine.rs  keys.rs  layout.rs  linux.rs  mod.rs  portal.rs  symbols.rs  system.rs  system_macros.rs  us_symbols.rs  validation.rs  vkbd.rs
src-tauri/src/mapper/engine/: builder.rs  mod.rs  model.rs
src-tauri/src/mapper/linux/: devices.rs  io.rs  mod.rs
src-tauri/src/platform/: linux.rs  mod.rs
(+182 files in other folders)
