[package]
name = "left-hand-control"
version = "0.1.0"
description = "Left Hand Control desktop app"
authors = ["you"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "left_hand_control_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12"
nix = { version = "0.29", features = ["poll", "event"] }
libc = "0.2"
xkbcommon = "0.9"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
